Fix workflow file

--- a/.github/workflows/latex-compile-release.yaml
+++ b/.github/workflows/latex-compile-release.yaml
@@ -16,16 +16,22 @@ jobs:
           with:
             root_file: |
               **/*.tex
+            work_in_root_file_dir: true
         
         - name: Create folder 
           run: mkdir release
         
-        - name: Copy compiled pdfs to release folder
-          run: cp *.pdf release
-          
-        - name: Copy cp folders content to release
-          run: cp -r cp*/ release
-        
+        - name: Copy cps to release folder
+          run: |
+              for dir in cp*/; do
+                  if [ -d "$dir" ]; then
+                    mkdir -p "release/$dir"
+                    cp "$dir"*.pdf "release/$dir"
+                    if [ -d "$dir"/assets ]; then
+                      cp -r "$dir"/assets "release/$dir"
+                    fi
+                  fi
+              done
         - name: Create ZIP archive of PDFs
           run: zip -r release.zip release/
         
